--- a/assets/style/scss/_main.scss
+++ b/assets/style/scss/_main.scss
@@ -4105,7 +4105,7 @@ small {
           legend {
             width: 30%;
             color: $pink;
-            margin: 0;
+            margin: 0 auto;
             padding: 0 20px;
             font: 24px/1 oswald, arial;
           }
@@ -11417,7 +11417,7 @@ $breadcrumb-divider: quote(">");
           fieldset {
 
             legend {
-
+              margin: 0 auto;
               width: 28%;
             }
           }
